# langchain_udemy

./: .gitignore  basic_chain.py  basic_function_calling.py  ice_breaker_app.py  pyproject.toml  testing_langsmith.ipynb
agents/: linkedin_lookup_agent.py  twitter_lookup_Agent.py
blog-content/: building-simple-agent-langchain.md  notebook.ipynb
code_interpreter/: main.py
documentation_helper/: download_docs.py  frontend.py  ingestion.py  modified_frontend.py
documentation_helper/backend/: core.py
ice_breaker/: app.py  output_parsers.py
ice_breaker/agents/: linkedin_lookup_agent.py
ice_breaker/third_parties/: linkedin.py
ice_breaker/tools/: tools.py
langchain_introduction/: main.py
langchain_react/: main.py
langgraph_agentic_rag/: ingestion.py  main.py
langgraph_agentic_rag/graph/: graph.py  state.py
langgraph_agentic_rag/graph/chains/: generation.py
langgraph_agentic_rag/graph/chains/tests/: test_chains.py
langgraph_agentic_rag/graph/nodes/: generate.py  grade_documents.py  retrieve.py  websearch.py
langgraph_memory_new/: ephemeral_memory.py  source.txt  summarization_memory.py  trimming_memory.py
langgraph_react/: main.py  nodes.py  react.py
langgraph_reflection_agent/: README.md  chains.py  main.py
langgraph_reflexion_agent/: README.md  chains.py  main.py  schemas.py  tool_executor.py
mcp_server/: langchain_client.py
mcp_server/server/: weather_server.py
react_langchain/: callbacks.py  main.py
third_parties/: linkedin.py  twitter.py
vector_databases/: faiss_vectorstore.py  ingestion.py  main.py  mediumblog1.txt  youtube_transcript_test.py
