[project]
name = "langchain-develop-llm-powered-applications-with-langchain"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain>=0.3.25",
    "langchain-anthropic>=0.3.15",
    "langchain-openai>=0.3.23",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "python-dotenv>=1.0.0",
    "langchain-tavily>=0.2.3",
    "langchain-community>=0.3.25",
    "tweepy>=4.15.0",
    "flask>=3.1.1",
    "langsmith>=0.1.0",
    "ipykernel>=6.29.5",
    "langchain-pinecone>=0.2.8",
    "langchain-text-splitters>=0.3.8",
    "youtube-transcript-api>=1.1.0",
    "pypdf>=5.7.0",
    "faiss-cpu>=1.11.0",
    "langgraph>=0.5.0",
]
