[project]
name = "langchain-develop-llm-powered-applications-with-langchain"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain>=0.3.25",
    "langchain-anthropic>=0.3.15",
    "langchain-openai>=0.3.23",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "python-dotenv>=1.0.0",
    "langchain-tavily>=0.2.3",
    "langchain-community>=0.3.25",
    "tweepy>=4.15.0",
    "flask>=3.1.1",
    "langsmith>=0.1.0",
    "ipykernel>=6.29.5",
    "langchain-pinecone>=0.2.8",
    "langchain-text-splitters>=0.3.8",
    "youtube-transcript-api>=1.1.0",
    "pypdf>=5.7.0",
    "faiss-cpu>=1.11.0",
    "langgraph>=0.5.0",
    "black>=25.1.0",
    "tiktoken>=0.9.0",
    "openai>=1.88.0",
    "unstructured>=0.18.1",
    "nltk>=3.9.1",
    "fastapi>=0.115.14",
    "jinja2>=3.1.6",
    "uvicorn>=0.35.0",
    "streamlit>=1.46.1",
    "streamlit-chat>=0.1.1",
    "tqdm>=4.67.1",
    "isort>=6.0.1",
    "langchainhub>=0.1.21",
    "pinecone>=7.2.0",
    "mcp>=1.10.1",
    "langchain-mcp-adapters>=0.1.8",
    "firecrawl-py>=2.14.0",
    "qrcode>=8.2",
    "langchain-experimental>=0.3.4",
    "pandas>=2.3.0",
    "tabulate>=0.9.0",
    "langchain-chroma>=0.2.4",
    "pytest>=8.4.1",
]
